--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,8 @@
 #loading {
     background-color: #cccccc;
+    margin: 10% 10% 10% 10%;
+}
+
+#loading h2, #loading p {
+    text-align: center;
 }
