More build cleanup
- Moved Ant macros into separate file

- Created new macros for jslint, jshint, csslint

- Created .bat files to run jslint, jshint, csslint on single files

- Ensure that dependency chain makes sense for build target

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,9 @@
         text-align: center;
     }
 
-    h3, h4 {
-        text-align: right;
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
