--- a/css/style.scss
+++ b/css/style.scss
@@ -33,11 +33,13 @@ body {
     background-color: $gray;
 }
 
-#main {
+#container {
 
+    /*
     input {
         margin-bottom: 1em;
     }
+    */
 }
 
 #loading {
