--- a/css/post-bootstrap-responsive.css
+++ b/css/post-bootstrap-responsive.css
@@ -1,7 +1,18 @@
+/* Twitter Bootstrap Tweaks */
+
+/*
 @media (max-width: 979px) {
 
-    /* Undo extra margin on small-screen with navbat-fixed-top */
     .navbar-fixed-top {
-        margin-bottom: 0px;
+        margin-bottom: 10px;
     }
 }
+
+.navbar-fixed-bottom {
+    margin-top: 0px;
+}
+
+.well {
+    margin-bottom: 10px;
+}
+*/
