--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,42 +1,1 @@
-/*****************************************************************************/
-/* CODEGEN WARNING: This .css file was generated from a .scss file */
-/*****************************************************************************/
-/*****************************************************************************/
-/* Colors */
-/*****************************************************************************/
-/*****************************************************************************/
-/* Mixins */
-/*****************************************************************************/
-/*****************************************************************************/
-/* Global Styles */
-/*****************************************************************************/
-body {
-  background-color: whiteSmoke;
-}
-#root .span-content {
-  background-color: #ffffff;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-}
-#root .span-content input {
-  width: 100%;
-  height: 3em;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-}
-#loading {
-  background-color: #ffffff;
-  margin: 10%;
-}
-#loading h2,
-#loading p {
-  text-align: center;
-}
-#loading img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-/*****************************************************************************/
-/* View-Specific Styles */
-/*****************************************************************************/
+body{background-color:whiteSmoke}#root .span-content{background-color:#fff;border-radius:5px;-webkit-border-radius:5px}#root .span-content input{width:100%;height:3em;box-sizing:border-box;-webkit-box-sizing:border-box}#loading{background-color:#fff;margin:10%}#loading h2,#loading p{text-align:center}#loading img{display:block;margin-left:auto;margin-right:auto}
